@@ -11,7 +11,7 @@ PROJECT(ibus-chewing)
 SET(CMAKE_C_FLAGS "-Wall")
 SET(PRJ_VER_MAJOR "1")
 SET(PRJ_VER_MINOR "0")
-SET(PRJ_VER_PATCH "1")
+SET(PRJ_VER_PATCH "2")
 SET(PRJ_VER_RELEASE "1")
 SET(SO_VER_MAJOR "1")
 SET(SO_VER_MINOR "0")
@@ -32,7 +32,6 @@ SET(BODHI_DIST_TAGS fc9 fc10)
 SET(PRJ_VER ${PRJ_VER_MAJOR}.${PRJ_VER_MINOR}.${PRJ_VER_PATCH}.${DATE_SHORT})
 INCLUDE(Version)
 SET(GENERATE_SPEC SPECS/${PROJECT_NAME}.spec.in)
-INCLUDE(RPM)
 INCLUDE(Gettext)
 
 #==================================================================
@@ -89,15 +88,15 @@ SET(CPACK_PACKAGE_VENDOR "Red Hat, APAC, Inc.")
 SET(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_CURRENT_SOURCE_DIR}/README")
 SET(CPACK_RESOURCE_FILE_LICENSE
     ${CMAKE_CURRENT_SOURCE_DIR}/COPYING)
-SET(PRJ_COMMON_IGNORE_FILES ${CMAKE_GENERATED_FILES} ${COMMON_IGNORE_FILES} ${RPM_IGNORE_FILES}
+SET(PRJ_COMMON_IGNORE_FILES 
     "/docs/"  
     "\\\\.cache$"  "\\\\.gmo$" "\\\\.spec$" "ibus-chewing-engine.*\\\\.[ch]$"
     "messages.po$"
 )
 
-SET(CPACK_SOURCE_IGNORE_FILES ${PRJ_COMMON_IGNORE_FILES} "/bin/" 
+SET(CPACK_SOURCE_IGNORE_FILES ${CPACK_SOURCE_IGNORE_FILES} ${PRJ_COMMON_IGNORE_FILES} "/bin/" 
     "\\\\.xml$")
-SET(CPACK_PACKAGE_IGNORE_FILES ${PRJ_COMMON_IGNORE_FILES} "/src/" 
+SET(CPACK_PACKAGE_IGNORE_FILES ${CPACK_BINARY_IGNORE_FILES} ${PRJ_COMMON_IGNORE_FILES} "/src/" 
     "\\\\.spec$" "\\\\.in$" "\\\\.pot$")
 
 INCLUDE(CPack)
