@@ -128,18 +128,8 @@ ADD_CUSTOM_TARGET(uninstall
 #
 
 SET(CPACK_PACKAGE_VERSION ${PRJ_VER})
-SET(CMAKE_GENERATED_FILES "/CMakeFiles/" "_CPack_Packages/" "/Testing/"
-	"\\\\.directory$" "CMakeCache\\\\.txt$" 
-	"/install_manifest.txt$"
-	"/cmake_.*install\\\\.cmake$" "/CPack.*\\\\.cmake$" "/CTestTestfile\\\\.cmake$"
-	"Makefile$"
-	)
-
-SET(COMMON_IGNORE_FILES
-	"/\\\\.svn/"  "/CVS/" "/\\\\.git/"  "\\\\.gitignore$"
-	"~$" "\\\\.swp$" "\\\\.log$" "\\\\.bak$"
-	"\\\\.gz$" "\\\\.bz2$"
-	"/src/config\\\\.h$" "NO_PACK" "DEVELOPER_SETTING") 
+SET(SOURCE_TARBALL_OUTPUT_DIR "${CMAKE_BINARY_DIR}/SOURCES")
+INCLUDE(RPM)
 
 #====================================================================
 # Document generation
